--- a/.gitignore
+++ b/.gitignore
@@ -19,3 +19,40 @@
 *.exe
 *.out
 *.app
+
+
+# Defaults
+*.swp
+.~
+thumbs.db
+*.sdf
+*.opensdf
+*.obj
+*.exe
+*.exp
+*.pdb
+*.dll
+*.user
+*.aps
+*.pch
+*.vspscc
+*_i.c
+*_p.c
+*.ncb
+*.suo
+*.tlb
+*.tlh
+*.bak
+*.cache
+*.ilk
+*.log
+*.zip
+[Dd]ebug*/
+*.lib
+*.sbr
+Thumbs.db
+[Ll]ib/
+[Rr]elease*/
+[Tt]est[Rr]esults/
+_UpgradeReport_Files/
+_ReSharper.*/
